<resources>
    <string name="app_name">MMSR Reader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="my_profile">My Profile</string>
    <string name="library">Library</string>
    <string name="my_storybooks">My Storybooks</string>
    <string name="others">Others</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="story_description">Story Description:</string>
    <string name="mmsr_reader">MMSR Reader</string>
    <string name="privacy_statement">Privacy Statement</string>
    <string name="update_library">update library</string>

    <string name="get_story_url">http://tarucmmsr.pe.hu/get_storybook_translate_list.php</string>
    <string name="speak">speak</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="points_statement">How to earn points?</string>


</resources>
