<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activity_profile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_library"
            android:checked="true"
            android:icon="@drawable/ic_library_books"
            android:title="@string/library" />

        <item
            android:id="@+id/nav_my_story_books"
            android:checked="false"
            android:icon="@drawable/ic_book"
            android:title="@string/my_storybooks" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
